Fix: Render map/table on Firefox mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1187,6 +1187,7 @@ h6 {
       fill: #a6abb0;
       stroke: #a6abb0;
       stroke-width: 0.5;
+      user-select: none;
       width: 16px;
 
       &:hover {
@@ -1749,16 +1750,10 @@ h6 {
     background: $pink-light;
     border-radius: 5px;
     color: $pink;
-    cursor: pointer;
     display: flex;
     flex-direction: row;
     margin-bottom: 0.5rem;
     padding: 0.5rem;
-    user-select: none;
-
-    &:hover {
-      background: $pink-hover;
-    }
 
     div {
       font-size: 13px;
@@ -1910,6 +1905,7 @@ abbr {
     height: 2.5rem;
     justify-content: center;
     margin-right: 0.25rem;
+    user-select: none;
     width: 2.5rem;
 
     svg {
@@ -2501,6 +2497,7 @@ abbr {
   cursor: pointer;
   position: absolute;
   right: 0;
+  user-select: none;
   z-index: 999;
 
   svg {
@@ -2838,6 +2835,7 @@ abbr {
           height: 2.5rem;
           justify-content: center;
           margin-left: 0.25rem;
+          user-select: none;
           width: 2.5rem;
 
           &.back {
